--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : #"Site Title"
+title                    : "Igor Shvab I"
 title_separator          : "-"
 name                     : "Shvab Igor"
 description              : "An amazing website."
