--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   #- title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-   - title: "About"
+- title: About
   url: /about/
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
    - title: "Sample Posts"
@@ -11,3 +11,17 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+# Site navigation links
+
+#- title: About
+ # url: /about/
+
+#- title: Blog
+#  url: /posts/
+
+#- title: Code
+#  url: /code/
+
+#- title: Publications
+#  url: /publications/
