--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
    - title: "Sample Posts"
   #   url: /year-archive/
    - title: "Sample Collections"
-  #   url: /collection-archive/
+     url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
 
