--- a/_config.yml
+++ b/_config.yml
@@ -89,12 +89,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
-  google_plus      :
+  github           : Igor-Shvab
+  google_plus      : 112044588202188868449
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : igor-shvab-6588865a
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
