--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en"
 title                    : "Igor Shvab website"
 title_separator          : "-"
-name                     : "Igor Shvab"
+name                     : "my name"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Igor Shvab"
-  avatar           : "~/Igor_photo.jpg"
+  avatar           : "Igor_photo.jpg"
   bio              : "Physicist and data scientist."
   location         : 
   email            :
@@ -90,7 +90,7 @@ author:
   facebook         :
   foursquare       :
   github           : Igor-Shvab
-  google_plus      : /u/0/112044588202188868449
+  google_plus      : u/0/112044588202188868449
   keybase          :
   instagram        :
   lastfm           :
