--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "Igor_photo.jpg"
   bio              : "Physicist and data scientist."
   location         : 
-  email            :
+  email            : i.shvab@gmail.com
   uri              :
   bitbucket        :
   codepen          :
