--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,11 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-   - title: "About"
-     url: /about/
-   - title: "Blog"
-     url: /posts/
-   - title: "Code"
-     url: /code/
-   - title: "Publications"
-     url: /publications/
+   #- title: "About"
+    # url: /about/
+   #- title: "Blog"
+    # url: /posts/
+   #- title: "Code"
+    # url: /code/
+   #- title: "Publications"
+    # url: /publications/
