--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,9 @@ main:
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
-   #- title: "Blog"
-    # url: /posts/
-   #- title: "Code"
-    # url: /code/
-   #- title: "Publications"
-    # url: /publications/
+  - title: "Blog"
+    url: /posts/
+  - title: "Code"
+    url: /code/
+  - title: "Publications"
+    url: /publications/
