--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : igor-shvab-6588865a
+  linkedin         : /u/0/112044588202188868449
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
