--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Igor Shvab website"
+title                    : "Homepage of Igor Shvab"
 title_separator          : "-"
 name                     : "my name"
 description              : "An amazing website."
