--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Igor Shvab"
-  avatar           : Igor_photo.jpg <height="64">
+  avatar           : Igor_photo.jpg
   bio              : "Physicist and data scientist."
   location         : 
   email            : i.shvab@gmail.com
